2.0.0a:
-------

- Upgraded to Qt 4.5.x

- Changed the internal xVST monolithic core to a dynamic core (based on Plugins)
- Changed: After a new update, on restart the program will check again for updates

- Added Danish (DA) language
- Added Portugese - Brasil (BR) language
- Added German (DE) language
- Added Romanian (RO) language
- Added URL for each video service in "Information" form
- Added embeded checking for updates at startup
- Added the possibility to set a custom conversion configuration on add a new video
- Added sorting for "Downloads log" list (now is sorted from old to new downloads)
- Added possibility to open urls (double click) in "Downloads log" list
- Added Paypal donate button in main window
- Added conditional updates (for future possible complicated updates)
- Added double click detection on Drag&Drop window (displaying the main window)
- Added two new formats to convert:
	- MP4 (*.mp4) format
	- Sony PSP (*.mp4) format

- Fixed bug (Error: when two or more videos failed an exception was generated)
- Fixed bug (Error: iPod mp4 format was not converted, thanks to "Jens Chr. True" for your help)
- Fixed bug (Error: 3gp format was not converted)
- Fixed bug (Error: editing the "Downloads Dir" manually in Main form, on enter a new char the cursor where placed at end of edit)
- Fixed bug (Error: Invlaid file names when the video title contains '/' or '\')
- Fixed bug (Error: Paypal link was corrupt, now the Paypal button links to xVST website donation page)
- Fixed bug (Error: Open downloads directory in tray icon were not opened)
- Fixed bug (Error: unneeded "content-length" header was added causing "400 bad request" error in some servers)
- Fixed bug (Error: speed buttons of Options window where bad linked to mouse actions)

- Updated English language
- Updated Spanish language
- Updated Catalan language
- Updated french language
- Updated ffmpeg lib to last version (0.5)

- Improved internal HTTP class (added connection timeout)